# Shark3_0

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md
build_macos/: client  libcore.dylib  server
scripts/scripts_postgres/: create.odt
src/config/: connect_db.conf  create_tables.sql  fill_pass_hash.sql  fill_users.sql  schema_db.conf
src/config/init_scripts/create_tables/: cr_chatlist.sql  cr_chats.sql  cr_messages.sql  cr_messages_status.sql  cr_participants.sql  cr_user_passhash.sql  cr_users.sql  insert_data.sql  mk_triggers_func.sql
src/core/chat_system/: chat_system.cpp  chat_system.h
src/core/sql/: sql.cpp  sql.h
src/server/: 0_init_system.cpp  0_init_system.h  init_sql_requests.h  postgres_db.cpp  postgres_db.h  server.cpp  server_session.cpp  sql_server.cpp  sql_server.h
